--- a/package.json
+++ b/package.json
@@ -1,47 +1,42 @@
 {
-	"name": "adalab-web-starter-kit",
-	"version": "3.0.0",
-	"description": "Adalab web starter kit",
-	"dependencies": {
-		"axios": "^0.21.1",
-		"browser-sync": "^2.26.14",
-		"caniuse-lite": "^1.0.30001179",
-		"del": "^5.1.0",
-		"eslint": "^7.1.0",
-		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "*",
-		"gulp-clean-css": "*",
-		"gulp-combine-mq": "*",
-		"gulp-concat": "*",
-		"gulp-html-tag-include": "^1.0.1",
-		"gulp-notify": "*",
-		"gulp-plumber": "*",
-		"gulp-rename": "*",
-		"gulp-sass": "^4.1.0",
-		"gulp-sourcemaps": "*",
-		"gulp-uglify-es": "^2.0.0",
-		"gulp-zip": "*",
-		"http-proxy": "^1.18.1",
-		"node-notifier": "^9.0.0",
-		"npm": "^7.8.0",
-		"object-path": "^0.11.5",
-		"run-sequence": "*",
-		"y18n": "^3.2.2"
-	},
-	"devDependencies": {
-		"lodash.template": ">=4.5.0"
-	},
-	"scripts": {
-		"start": "./node_modules/.bin/gulp",
-		"docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
-		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
-		"deploy": "npm run push-docs"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com:Adalab/adalab-web-starter-kit.git"
-	},
-	"author": "Adalab",
-	"license": "MIT",
-	"homepage": "https://github.com/adalab/adalab-web-starter-kit"
+  "name": "adalab-web-starter-kit",
+  "version": "3.0.1",
+  "description": "Adalab web starter kit",
+  "dependencies": {
+    "browser-sync": "^2.26.12",
+    "del": "^5.1.0",
+    "eslint": "^7.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "*",
+    "gulp-clean-css": "*",
+    "gulp-combine-mq": "*",
+    "gulp-concat": "*",
+    "gulp-html-tag-include": "^1.0.1",
+    "gulp-notify": "*",
+    "gulp-plumber": "*",
+    "gulp-rename": "*",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "*",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-zip": "*",
+    "node-sass": "^6.0.1",
+    "run-sequence": "*",
+    "sass": "^1.35.2"
+  },
+  "devDependencies": {
+    "lodash.template": ">=4.5.0"
+  },
+  "scripts": {
+    "start": "./node_modules/.bin/gulp",
+    "docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
+    "push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
+    "deploy": "npm run push-docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:Adalab/adalab-web-starter-kit.git"
+  },
+  "author": "Adalab",
+  "license": "MIT",
+  "homepage": "https://github.com/adalab/adalab-web-starter-kit"
 }
